--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "body-parser": "^1.6.6",
     "express": "^4.8.6",
-    "showtimes": "^0.3.0"
+    "showtimes": "^0.3.0",
+    "yelp": "^0.1.1"
   },
   "devDependencies": {},
   "scripts": {
