--- a/bower.json
+++ b/bower.json
@@ -21,5 +21,8 @@
     "client/bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "angular-ui-router": "~0.2.11"
+  }
 }
