--- a/package.json
+++ b/package.json
@@ -9,7 +9,19 @@
     "showtimes": "^0.3.0",
     "yelp": "^0.1.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "gulp": "^3.8.7",
+    "gulp-concat": "^2.3.4",
+    "gulp-jshint": "^1.8.4",
+    "gulp-karma": "0.0.4",
+    "gulp-livereload": "^2.1.1",
+    "gulp-nodemon": "^1.0.4",
+    "gulp-uglify": "^1.0.0",
+    "gulp-watch": "^0.6.10",
+    "jshint-stylish": "^0.4.0",
+    "karma": "^0.12.23",
+    "tiny-lr": "^0.1.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
