--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "body-parser": "^1.6.6",
     "express": "^4.8.6",
+    "mongoose": "^3.8.15",
     "showtimes": "^0.3.0",
     "yelp": "^0.1.1"
   },
