--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "description": "> Tired of using multiple sites to plan your night? Nite-Out is your one-stop-shop for people looking to spend a night out on the town.",
   "main": "index.js",
   "dependencies": {
+    "bcrypt": "^0.8.0",
     "body-parser": "^1.6.6",
-    "express": "^4.8.6",
     "bookshelf": "^0.7.7",
+    "eventbrite": "^0.1.6",
+    "express": "^4.8.6",
     "knex": "^0.6.22",
     "mongoose": "^3.8.15",
     "mysql": "^2.4.3",
     "showtimes": "^0.3.0",
-    "yelp": "^0.1.1",
-    "bcrypt": "^0.8.0"
+    "yelp": "^0.1.1"
   },
   "devDependencies": {
     "karma": "^0.12.23",
