--- a/.jshintrc
+++ b/.jshintrc
@@ -1,5 +1,5 @@
 {
-    "predef": ["angular", "google"]
+    "predef": ["angular", "google"],
     "node": true,
     "esnext": true,
     "bitwise": true,
